// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a exports 1`] = `
Array [
  "test/a/a1 a11",
  "test/a/a1",
  "test/a/a2",
  "test/a/a4 a4",
  "test/a/a4",
]
`;

exports[`a imports 1`] = `
Array [
  "test/a/a4",
  "test/a/a1",
  "test/a/a1 a11",
  "test/a/a1 a12",
]
`;

exports[`a unresolved 1`] = `
Set {
  "test/a/a2",
  "test/a/a4 a4",
}
`;

exports[`b exports 1`] = `
Array [
  "test/b/b1 b1",
  "test/b/b1",
  "test/b/b2",
]
`;

exports[`b imports 1`] = `Array []`;

exports[`b unresolved 1`] = `
Set {
  "test/b/b1 b1",
  "test/b/b1",
  "test/b/b2",
}
`;
